# ai-training-data-governance

./: .gitignore  LICENSE  README.md  demo.sh  pyproject.toml
assets/: governance-framework-diagram.drawio
docs/: evaluation-checklist.md  framework-overview.md  requirements.md  risk-taxonomy.md
docs/spec/: design.md  tasks.md
rdi/: __init__.py  c2pa_validator.py  cli.py  cmdi_calculator.py  deduplicator.py  exceptions.py  license_classifier.py  models.py  pii_scanner.py  pipeline.py  provenance_ledger.py  quality_scorer.py  risk_report.py  toxicity_filter.py
reports/: RDI_Framework_POC_Status_Report.docx
samples/: clean_text.txt  duplicate_a.txt  duplicate_b.txt  pii_text.txt  toxic_text.txt
scripts/: generate_report.py
tests/: __init__.py  conftest.py  test_cli.py  test_deduplicator.py  test_pii_scanner.py  test_pipeline.py  test_provenance_ledger.py  test_risk_report.py  test_toxicity_filter.py
