[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdi-framework"
version = "0.1.0"
description = "Responsible Data Infrastructure (RDI) Framework — AI training data governance pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RDI Framework Contributors"},
]
keywords = ["ai", "governance", "data", "pii", "toxicity", "deduplication", "provenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.5",
    "detoxify>=0.5",
    "datasketch>=1.6",
    "click>=8.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.80",
    "pytest>=7.0",
]

[project.scripts]
rdi = "rdi.cli:main"

[tool.setuptools.packages.find]
include = ["rdi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
